  [Improvement with Incompatible Changes]
    * In this release, UTF-8 strings passed as arguments to the methods that calls Windows system calls are now handled correctly.
      Sys::IO#open
      Sys#open, Sys::IO#fopen
      Sys#chmod, Sys::IO#chmod
      Sys::IO#access
      Sys#mkdir, Sys::IO#mkdir
      Sys#rmdir, Sys::IO#rmdir
      Sys#chdir, Sys::IO#chdir
      Sys::IO#truncate
    
0.538 2025-05-21
  [Bug Fix]
    * Fix bugs that Sys::IO::Windows#realpath method failed when the file is not symbolic link.
0.537 2025-05-20
  [Incompatible Changes]
    * Sys::IO::Windows#realpath method does not return long path.
0.536 2025-05-20
  [New Features]
    * Add Sys::IO::Windows#realpath method.
  
0.535 2025-05-19
  [Bug Fix]
    * Fix bugs that Sys#rename in Windows and Sys::IO::Windows#rename do not work well.
0.534 2025-05-17
  [Bug Fix with Incompatible Changes]
    * Fix a bug that Sys->e return 0 if the file is a symbolic link.
0.533 2025-05-15
  [Fix Exception Messages]
    * Fix an exception message in Sys::IO::Stat#lstat method.
  [New Features with Incompatible Changes]
    * Sys::IO::Stat#stat method returns Perl compatible values in Windows.
    * Sys::IO::Stat#lstat method returns Perl compatible values in Windows.
    * Sys::IO::Stat#fstat method returns Perl compatible values in Windows.
    * Remove Sys::IO::Windows#lstat method.
0.532 2025-01-29
  [Requirement Changes]
    * Require SPVM 0.990042.
  [Test Improvement]
    * Call Fn#destroy_runtime_permanent_vars method in the end of tests.
0.531 2025-01-20
  [Requirement Changes]
    * Require SPVM 0.990040.
0.530 2025-01-17
  [Bug Fix]
    * Fix bugs that the following classes are not compiled in compilation time.
    
      Sys::OS
      Sys::Env
      Sys::Select::Constant
      Sys::Poll::Constant
      Sys::IO::Stat
    * Fix a bug that Sys::Time#setitimer does not work well.
    
  [Exception Changes]
    * Sys::Process#waitpid method throws an exception if $wstatus_ref is not defined.