@@ -1,10 +1,12 @@
 # Copyright (c) 2023 Yuki Kimoto
 # MIT License
 
-use strict;
-use warnings;
-use SPVM::Builder::Config;
+use File::Basename 'dirname';
 
 my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
+
+my $sys_windows_include_dir = dirname(__FILE__) . "/Windows.native/include";
+
+$config->add_include_dir($sys_windows_include_dir);
 
 $config;
